v1.12.x/developers/contribute/developing-a-new-connector/test-it.mdx
---
title: Test It
sidebarTitle: Test it
---

# Test It

In order to test your new connector you need to run `make generate` from the project's root in order to generate the propert Python Classes from the JSON Schemas you created and modified.

## Unit Tests

If you want to test the whole package you could always run the following commands from the project's root:

```bash
make install_test
make coverage
```

This could be slow and in order to iterate faster you could just run the tests you created for your connector by running `pytest {path_to_your_tests}`.

## Run the Connector from the CLI

In order to test the connector using the CLI you first need to have the OpenMetadata stack running locally.
The easiest way to do is to check how to do it [here](/v1.12.x/developers/contribute/build-code-and-run-tests).

With it up and running you can install the ingestion pacakge locally and use the CLI directly:

```bash
metadata ingest -c {your_yaml_file}
```

## Run the Connector from the UI

In order to test the connector using the UI you first need to have the OpenMetadata stack running locally.
The easiest way to do is to check how to do it [here](/v1.12.x/developers/contribute/build-code-and-run-tests).

With it up and running you can configure the connector from the UI itself.

## AI-Assisted Testing and Review

If you are using Claude Code or another AI agent with the OpenMetadata skills installed, you can use these commands to streamline testing and review:

### Local Docker Testing

Use the `/test-locally` skill to automatically build and deploy the full OpenMetadata stack with Docker:

```bash
# In Claude Code
/test-locally              # Auto-detect changes and build
/test-locally --skip-maven # Fast rebuild (Python-only changes)
/test-locally --teardown   # Stop and remove containers
```

This handles code generation, build optimization, health checks, and provides guided instructions for testing your connector in the UI at `http://localhost:8585`.

### Connector Review

Use the `/connector-review` skill to review your connector against OpenMetadata standards before submitting a PR:

```bash
# Review connector code locally
/connector-review ingestion/src/metadata/ingestion/source/database/my_connector/

# Review a PR and post findings as GitHub PR comments
/connector-review 12345
```

The review covers schema validation, error handling, performance (pagination, memory), test quality, and code style. When a PR number is provided, the review findings can be posted directly as GitHub PR review comments with an APPROVED, NEEDS CHANGES, or BLOCKED verdict.

## Next Step

Now that it's all working correctly, let's learn how to update the documentation for everyone else that will use the connector!

<Card title="Update the Documentation" href="/v1.12.x/developers/contribute/developing-a-new-connector/update-documentation" >
    Learn how to create the documentation for your new Connector
  </Card>
